# src/Infrastructure/Resources/EmployeesWithCounterResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace Src\Infrastructure\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class EmployeesWithCounterResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'surname' => $this->surname,
+            'counters' => CounterWithStepsResource::collection($this->whenLoaded('counters')),
+        ];
+    }
+}
